--- a/index.html
+++ b/index.html
@@ -2,131 +2,11 @@
 
 <head>
     <script src="Data_Junk.js"></script>
-    <style>
-        td,
-        th {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        tr:hover {
-            background-color: #ddd;
-        }
-
-        th {
-            padding-top: 12px;
-            padding-bottom: 12px;
-            text-align: left;
-            background-color: #04AA6D;
-            color: white;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        .clear {
-            clear: both;
-        }
-
-
-        .slide-toggle {
-            display: none;
-        }
-
-        .slidemenu {
-            font-family: arial, sans-serif;
-            max-width: 600px;
-            margin: 50px auto;
-            overflow: hidden;
-        }
-
-        .slidemenu label {
-            width: 25%;
-            text-align: center;
-            display: block;
-            float: left;
-            color: #333;
-            opacity: 0.2;
-
-        }
-
-        .slidemenu label:hover {
-            cursor: pointer;
-            color: #666;
-        }
-
-        .slidemenu label span {
-            display: block;
-            padding: 10px;
-        }
-
-        .slidemenu label .icon {
-            font-size: 20px;
-            border: solid 2px #333;
-            text-align: center;
-            height: 50px;
-            width: 50px;
-            display: block;
-            margin: 0 auto;
-            line-height: 50px;
-            border-radius: 50%;
-        }
-
-        /*Bar Style*/
-
-        .slider {
-            width: 100%;
-            height: 5px;
-            display: block;
-            background: #ccc;
-            margin-top: 10px;
-            border-radius: 5px;
-        }
-
-        .slider .bar {
-            width: 25%;
-            height: 5px;
-            background: #333;
-            border-radius: 5px;
-        }
-
-        /*Animations*/
-        .slidemenu label,
-        .slider .bar {
-            transition: all 500ms ease-in-out;
-            -webkit-transition: all 500ms ease-in-out;
-            -moz-transition: all 500ms ease-in-out;
-        }
-        /*Toggle*/
-        .slidemenu .slide-toggle:checked+label {
-            opacity: 1;
-        }
-        .slidemenu #slide-item-1:checked~.slider .bar {
-            margin-left: 0;
-        }
-
-        .slidemenu #slide-item-2:checked~.slider .bar {
-            margin-left: 25%;
-        }
-
-        .slidemenu #slide-item-3:checked~.slider .bar {
-            margin-left: 50%;
-        }
-
-        .slidemenu #slide-item-4:checked~.slider .bar {
-            margin-left: 75%;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">    
+    <script src="functions.js"></script>
 </head>
 
 <body onload="ShowElement('')">
-    <div class="container">
         <nav class="slidemenu">
 
             <!-- Item 1 -->
@@ -161,6 +41,7 @@
             </div>
 
         </nav>
+        <div class="content">
         <div id="content_legendaries">
             <table>
                 <tr>
@@ -196,7 +77,18 @@
             <div id="content_junk_all">
             </div>
             <div id="content_junk_single">
-                <select id="junk_items_select"></select>
+                <div class="form-style-5">
+                    <form>
+                    <fieldset>
+                        <label for="junk_items_select">Item:</label>
+                        <select id="junk_items_select"></select>
+                        <input type="text" id="junk_amount" placeholder="Stored Amount *">
+                    </fieldset>
+                    <input type="button" value="Apply" onclick="ShowJunkItemData()" />
+                    </form>
+                </div>
+                <div class="select">
+                </div>
                 <input type="text" id="junk_amount" />
                 <button id="show_junk_data" onclick="ShowJunkItemData()">Show</button>
                 <div id="junk_item_data"></div>
@@ -207,95 +99,5 @@
 
 </html>
 <script>
-    var Block = "block";
-    var None = "none";
-    function ToggleElement(id, style) {
-        console.log(`Toggle : ${id} : ${style}`);
-        var divElement = document.getElementById(id);
-        divElement.style.display = style;
-    }
-
-    function ShowElement(id) {
-        var ids = [
-            "content_legendaries",
-            "content_junk"
-        ];
-        for (i = 0; i < ids.length; i++) {
-            var style = None;
-            if (id === ids[i]) {
-                style = Block;
-            }
-            ToggleElement(ids[i], style);
-        }
-    }
-
-    function ShowContentLegendaries() {
-        ShowElement("content_legendaries");
-    }
-
-    function ShowContentJunk(type) {
-        ShowElement("content_junk");
-        ToggleElement("content_junk_all", None);
-        ToggleElement("content_junk_single", None);
-        if (type === null || type === "") {
-            return;
-        }
-        var id = `content_junk_${type}`;
-        ToggleElement(id, Block);
-        let data = GetJunkData();
-        var selectElement = document.getElementById("junk_items_select");
-        while (selectElement.options.length > 0) {
-            selectElement.remove(0); // Remove the first option (index 0) repeatedly
-        }
-        for (i = 0; i < data.length; i++) {
-            var newOption = document.createElement("option");
-            // Set the value and text of the new option
-            newOption.value = i;
-            newOption.text = data[i].Item;
-            // Append the new option to the select element
-            selectElement.appendChild(newOption);
-        }
-    }
-    function ShowJunkItemData() {
-        var amount = document.getElementById("junk_amount").value;
-        if (amount === "") {
-            amount = 0;
-        }
-        var selectElement = document.getElementById("junk_items_select");
-        // Get the selected option
-        var selectedOption = selectElement.options[selectElement.selectedIndex];
-        // Get the text of the selected option
-        var selectedOptionText = selectedOption.text;
-        let data = GetJunkData();
-        var divElement = null;
-        let tableAll = "<table>";
-        tableAll += `<tr><th>Item</th><th>Keep</th><th>Price</th><th>Bulk $</th></tr>`;
-        for (i = 0; i < data.length; i++) {
-            if (data[i].Item === selectedOptionText) {
-                let sell = amount - data[i].Keep;
-                if (sell < 0) {
-                    sell = 0;
-                }
-                let bulkPrice = data[i].Sell * data[i].Bulk;
-                divElement = document.getElementById("junk_item_data");
-                // Update the content of the div
-                let table = "<table>";
-                table += `<tr><td><b>Item</b></td><td>${data[i].Item}</td></tr>`;
-                table += `<tr><td><b>Stored</b></td><td>${amount}</td></tr>`;
-                table += `<tr><td><b>Keep</b></td><td>${data[i].Keep}</td></tr>`;
-                table += `<tr><td><b>Sell</b></td><td>${sell}</td></tr>`;
-                table += `<tr><td><b>Price</b></td><td>${data[i].Sell}</td></tr>`;
-                table += `<tr><td><b>Bulk</b></td><td>${data[i].Bulk}</td></tr>`;
-                table += `<tr><td><b>Bulk Price</b></td><td>${bulkPrice}</td></tr>`;
-                table += "</table>";
-                divElement.innerHTML = "<hr>" + table;
-            }
-
-            tableAll += `<tr><td>${data[i].Item}</td><th>${data[i].Keep}</td><th>${data[i].Sell}</td><td>${bulkPrice}</td></tr>`;
-        }
-        tableAll += "</table>";
-        divElement = document.getElementById("content_junk_all");
-        console.log(tableAll);
-        divElement.innerHTML = tableAll;
-    }
+    
 </script>
