--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
+            <div class="col-12">
                 <!--
                 -------------------------------------------------------------------
                 LEGENDARIES
@@ -124,7 +123,7 @@
                             <label for="junk_amount" class="form-label">Storage</label>
                             <input type="text" class="form-control" id="junk_amount" placeholder="Storage Qty">
                         </div>
-                        <button type="button" class="btn btn-primary" onclick="ShowJunkItemData()">Submit</button>
+                        <button type="button" class="btn btn-primary" onclick="ShowJunkItemData()">View</button>
                     </form>
                     <div id="junk_item_data">
                         <form>
@@ -148,7 +147,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1"></div>
         </div>
     </div>
 </body>
